# composable-districts

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README.org  diff.py  experiments.ipynb  experiments.py  process.py  pyproject.toml
.github/: test-lint.yaml
.github/workflows/: test-lint.yaml
examples/: export.py
geocompose/: __init__.py  auxiliary.py  definitions.py  export.py  models.py  read.py
tests/: test_addressdf.py  test_merges.py  test_normalization.py
utilities/: diff.py  process.py
writeup/: writeup.org  writeup.tex
writeup/auto/: writeup.el
