[tool.poetry]
name = "geocompose"
version = "0.1.0"
description = "A library for representing geographical regions as a set of addresses. Intended for use in redistricting."
authors = ["Max Fan <root@max.fan>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.8.1"
pydantic = "^1.6.1"
postal = "^1.1.9"
rtree = "^0.9.4"
setuptools = "^50.0.3"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
